Atualização do README e DTOs